# Bond_date_old

./: DJANGO_MIGRATION_ASSESSMENT.md  PUSH_TO_NEW_REPO.md  Pifagr_name_with_emitter.csv  README.md  api.py  app.py  app_calendar.py  app_index_analytics.py  app_repo.py  app_sell_stres.py  app_sell_stress_xml.py  app_vm.py  company_news_cli.py  config.py  email_compose.py  index_analytics.py  moex_bonds_daily_sync.py  news_agent_config.py  requirements.txt  sell_stress.py  streamlit_app.py
agent/: __init__.py  agent.py  analyzer.py  postprocessor.py  prompts.py
analytics_clean_arch/: .env.template  Makefile  README.md  pyproject.toml  requirements.txt
analytics_clean_arch/src/analytics_app/application/: contracts.py  errors.py
analytics_clean_arch/src/analytics_app/application/services/: sell_stress_service.py  vm_calculation_service.py
analytics_clean_arch/src/analytics_app/domain/: exceptions.py  formulas.py
analytics_clean_arch/src/analytics_app/infrastructure/: config.py  errors.py
analytics_clean_arch/src/analytics_app/infrastructure/clients/: cbr_client.py  moex_client.py
analytics_clean_arch/src/analytics_app/infrastructure/di/: container.py
analytics_clean_arch/src/analytics_app/presentation/: cli.py
analytics_clean_arch/src/analytics_app/schemas/: sell_stress.py  vm.py
analytics_clean_arch/tests/domain/: test_formulas.py
api/: company_news_api.py  streamlit_app.py
db/: docker-compose.yml  schema.sql
ifrs/: __init__.py  extractor.py  loader.py  normalizer.py  parser.py
loader/: moex_loader.py
news/: __init__.py  deduplicator.py  (+4 more)
(+25 files in other folders)
